[gd_scene load_steps=4 format=3 uid="uid://c7ranoe3abght"]

[ext_resource type="Script" uid="uid://crmkatrasqifl" path="res://end_story/scripts/end_scene.gd" id="1_jvya2"]
[ext_resource type="Texture2D" uid="uid://rv8bfrja6i1v" path="res://Main/background_logo.png" id="2_4xvt6"]
[ext_resource type="PackedScene" uid="uid://b7wff7da87j4" path="res://ParkStory/scenes/playerChoice.tscn" id="3_d6kv6"]

[node name="EndScene" type="Node2D"]
script = ExtResource("1_jvya2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4xvt6")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -464.0
offset_top = -255.0
offset_right = 54.0
offset_bottom = -213.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = " Great job , Here's how you scored : "

[node name="Button" parent="CanvasLayer/Control" instance=ExtResource("3_d6kv6")]
unique_name_in_owner = true
layout_mode = 0
offset_left = -188.0
offset_top = 276.0
offset_right = 262.0
offset_bottom = 331.0
text = "Home "

[node name="Polygon2D" type="Polygon2D" parent="CanvasLayer/Control"]
position = Vector2(-99, 118)
scale = Vector2(1.405, 1)
color = Color(0.16862746, 0.5372549, 0.6862745, 0.69411767)
polygon = PackedVector2Array(-260, -290, 450, -290, 450, 150, -260, 150)

[node name="Control" type="Control" parent="CanvasLayer/Control/Polygon2D"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/Polygon2D/Control"]
layout_mode = 0
offset_left = -173.5943
offset_top = -168.0
offset_right = 14.405701
offset_bottom = -145.0
text = "Memory :  "

[node name="attention_label" type="Label" parent="CanvasLayer/Control/Polygon2D/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 174.4484
offset_top = 83.0
offset_right = 362.44843
offset_bottom = 106.0
text = "Memory :  "

[node name="Label3" type="Label" parent="CanvasLayer/Control/Polygon2D/Control"]
layout_mode = 0
offset_left = -172.17082
offset_top = 82.0
offset_right = 15.829178
offset_bottom = 105.0
text = "Attention"

[node name="reason_label" type="Label" parent="CanvasLayer/Control/Polygon2D/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 175.8719
offset_top = -47.0
offset_right = 363.8719
offset_bottom = -24.0
text = "Memory :  "

[node name="Label5" type="Label" parent="CanvasLayer/Control/Polygon2D/Control"]
layout_mode = 0
offset_left = -175.01779
offset_top = -49.0
offset_right = 12.982208
offset_bottom = -26.0
text = "Reasoning :  "

[node name="memory_label" type="Label" parent="CanvasLayer/Control/Polygon2D/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 175.8719
offset_top = -177.0
offset_right = 363.8719
offset_bottom = -154.0
text = "Memory :  "
